@@ -21,6 +21,7 @@ package yass.options.enums;
 
 import yass.YassEnum;
 
+import java.util.Arrays;
 import java.util.List;
 
 public enum YtDlpAudioFormat implements YassEnum {
@@ -44,9 +45,13 @@ public enum YtDlpAudioFormat implements YassEnum {
         return value;
     }
 
+    public String getExtension() {
+        return extension;
+    }
+
     @Override
     public List<YassEnum> listElements() {
-        return List.of();
+        return Arrays.asList(values());
     }
 
     @Override
